# druid-client-rs

./: Cargo.toml  Makefile  README.md
docker/: docker-compose.yaml
docker/druid/: Dockerfile
src/: client.rs  lib.rs
src/query/: definitions.rs  group_by.rs  mod.rs  response.rs  scan.rs  search.rs  segment_metadata.rs  time_boundary.rs  timeseries.rs  top_n.rs
src/query/definitions/: aggregators.rs  dimensions.rs  extraction_functions.rs  filters.rs  granularitys.rs  having.rs  hll_sketch.rs  intervals.rs  limit.rs  lookup.rs  mod.rs  ordering.rs  output_types.rs  postagregator.rs  virtual_columns.rs
tests/: druid.rs  granularitys.rs  scan.rs
