[package]
name = "druid-io"
version = "0.1.0"
authors = ["Rafael Bagmanov <bugzmanov@gmail.com>"]
edition = "2021"
license = "MIT"
homepage = "https://github.com/bugzmanov/druid-io-rs"
repository = "https://github.com/bugzmanov/druid-io-rs"
description = "Asynchronous Apache Druid client library."
readme = "README.md"
keywords = ["tokio", "database", "druid"]
categories = ["database"]
exclude = ["tests/*", "examples/*", "docker/*"]

[dependencies]
chrono =  { version = "0.4", features = ["serde"] }
reqwest = { version = "0.11" }
serde = {version = "1.0.*", features = ["derive"]}
serde_derive = "1.0.*"
serde_json = "1.0.*"
thiserror = "1.0.20"

[dev-dependencies]
tokio = { version = "1", features = ["rt-multi-thread"] }
tokio-test = "0.4"